[package]
name = "connect-you-ports-mq"
version = "0.1.2"
edition = "2024"

[dependencies]
rand = { version = "~0.10" }
tokio = { version = "~1.49", features = ["full"] }
chrono = { version = "~0.4" }
log = { version = "~0.4", features = ["std", "serde"] }
paho-mqtt = {version = "0.12" }
env_logger = { version = "~0.11" }
uuid = { version = "~1.20", features = ["v4", "serde"] }
sha1 = { version = "~0.10" }
serde = { version = "~1.0", features = ["derive"] }
bincode = { version = "~1.3" }
futures = { version = "~0.3" }
aes-gcm = { version = "~0.10" }
hex = { version = "~0.4" }
